--- a/01. Basic of c++/outputf.in
+++ b/01. Basic of c++/outputf.in
@@ -1,7 +1,3 @@
-Size of int:4
-Size of char:1
-Size of bool:1
-Size of float:4
-Size of double:8
-Size of void:1
-Size of wchar_t:4
+Value of p: 29
+Value of r: 75.25
+Value store in block of memory: 1 2 3 4 5 
